cluster/apps/media/radarr/networkpolicies/radarr.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: radarr
  namespace: media
spec:
  description: "Policy for radarr"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            app.kubernetes.io/name: prowlarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: api.radarr.video
        - matchName: ${USENET_INDEXER_DOMAIN}
        - matchName: file.${USENET_INDEXER_DOMAIN}
        - matchName: ghcr.io # catppuccin theme
        - matchName: hooks.slack.com
        - matchName: image.tmdb.org
        - matchName: pkg-containers.githubusercontent.com # catppuccin theme
        - matchName: plex.tv
        - matchName: radarr.servarr.com
        - matchName: raw.githubusercontent.com # catppuccin theme
        - matchName: sentry.servarr.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
